--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 메모리얼 플레이스
+title: Shawn Han
 email: tosky0514@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Backend Engineer | Technology changes the world
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
@@ -31,6 +29,9 @@ github_username:  tosky1125
 
 # Build settings
 theme: minima
+author:
+  name: Shawn Han
+  email: tosky0514@gmail.com
 plugins:
   - jekyll-feed
 
