--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ theme: minima
 author:
   name: Shawn Han
   email: tosky0514@gmail.com
+  bio: Backend Developer | Building scalable systems
 plugins:
   - jekyll-feed
 
