Add cache control headers to prevent browser caching
- Add no-cache meta tags to header.html
- Add version string to config for cache busting
- Force browsers to always fetch fresh content

--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,9 @@ image: /assets/images/og-image.png
 # Google Analytics (추가하려면)
 # google_analytics: UA-XXXXXXXXX-X
 
+# Cache busting - add version query string to assets
+version: "{{ site.time | date: '%Y%m%d%H%M%S' }}"
+
 # Build settings
 theme: minima
 author:
